--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
   <header class="navbar" role="navigation" aria-label="Main">
     <div class="container wrap">
       <a class="logo" href="#home">
-        <span class="logo-mark"><img src="salmonblack.png" alt="Salmon & Co Solicitors logo with scales of justice"></span>
+        <span class="logo-mark"><img src="Salmonblack.png" alt="Salmon & Co Scales"></span>
       </a>
       <nav>
         <a href="#about">About Us</a>
@@ -733,7 +733,7 @@
 
   <footer role="contentinfo">
     <div class="container footgrid">
-      <div><div class="logo"><span class="logo-mark"><img src="salmon.png" alt="Salmon & Co Solicitors logo" style="filter: brightness(0) invert(1);"></span></div><p class="disclaimer">This website provides general information only and does not constitute legal advice...</p></div>
+      <div><div class="logo"><span class="logo-mark"><img src="Salmon.png" alt="Salmon & Co Solicitors logo" style="filter: brightness(0) invert(1);"></span></div><p class="disclaimer">This website provides general information only and does not constitute legal advice...</p></div>
       <div><h4>Contact</h4><p>📍 157A Waterloo Rd, Greenacre NSW 2190<br/>📞 (02) 9750 7511</p></div>
       <div><h4>Follow Us</h4><p><a href="#">LinkedIn</a><br><a href="#">Facebook</a></p></div>
     </div>
@@ -877,4 +877,5 @@
   });
   </script>
 </body>
+
 </html>
