--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
   <header class="navbar" role="navigation" aria-label="Main">
     <div class="container wrap">
       <a class="logo" href="#home">
-        <span class="logo-mark"><img src="Salmonblack.png" alt="Salmon & Co Scales"></span>
+        <span class="logo-mark"><img src="SalmonBlack.png" alt="Salmon & Co Scales"></span>
       </a>
       <nav>
         <a href="#about">About Us</a>
@@ -879,3 +879,4 @@
 </body>
 
 </html>
+
