--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       width: 120px;
       height: 120px;
       border-radius: 50%;
-      overflow: hidden;
       flex: 0 0 120px;
       border: 3px solid #E5E7EB;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -43,6 +42,8 @@
   --muted:#667085;     /* secondary text */
   --line:#E5E7EB;      /* borders */
   --white:#fff;
+  --chat-avatar-size: 32px;  /* Adjust this to change avatar size */
+  --chat-avatar-font: 11px;  /* Adjust this to change avatar text size */
     }
     html,body{margin:0;padding:0;color:var(--ink);font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;line-height:1.6;background:var(--sand)}
     .serif{font-family: Georgia, "Times New Roman", Times, serif}
@@ -819,12 +820,72 @@
   #salmon-bubble button:hover {
     transform: scale(1.1);
   }
-  #salmon-panel{position:fixed;right:20px;bottom:102px;width:340px;max-height:60vh;background:#fff;border:1px solid #ddd;border-radius:16px;box-shadow:0 8px 30px rgba(0,0,0,.12);display:none;overflow:hidden;font:14px system-ui}
-  #salmon-head{padding:10px 12px;border-bottom:1px solid #eee;font-weight:600}
-  #salmon-msgs{padding:12px;height:300px;overflow:auto}
-  #salmon-form{display:flex;gap:6px;padding:8px;border-top:1px solid #eee;background:#fafafa}
-  #salmon-form input{flex:1;padding:10px;border:1px solid #ddd;border-radius:10px}
-  #salmon-form button{padding:10px 12px;border:0;border-radius:10px;background:#111;color:#fff;cursor:pointer}
+  #salmon-panel{position:fixed;right:20px;bottom:102px;width:460px;max-height:75vh;background:#fff;border:1px solid #ddd;border-radius:16px;box-shadow:0 8px 30px rgba(0,0,0,.12);display:none;overflow:hidden;font:15px system-ui}
+  #salmon-head{padding:16px;border-bottom:1px solid #eee;font-weight:600}
+  #salmon-msgs{padding:20px;height:450px;overflow:auto}
+  #salmon-msgs .msg{display:flex;gap:12px;margin:16px 0;align-items:flex-start}
+  #salmon-msgs .avatar{
+    min-width:10px;
+    width:10px;
+    height:32px;
+    border-radius:9999px;
+    flex-shrink:0;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-weight:500;
+    font-size:11px;
+    box-shadow:0 2px 4px rgba(0,0,0,0.1);
+    overflow:hidden;
+  }
+  #salmon-msgs .user .avatar{
+    background:#E1F0FF;
+    color:#0066CC;
+  }
+  #salmon-msgs .bot .avatar{
+    background:#1B4965;
+    color:#ffffff;
+  }
+  #salmon-msgs .content{
+    flex:1;
+    background:#F8F8F8;
+    padding:12px 16px;
+    border-radius:12px;
+    position:relative;
+    margin-top:0;
+  }
+  #salmon-msgs .user .content{
+    background:#E1F0FF;
+  }
+  #salmon-msgs .bot .content{
+    background:#F8F8F8;
+  }
+  
+  /* Typing indicator */
+  .typing-indicator {
+    display: flex;
+    gap: 4px;
+    align-items: center;
+    width: fit-content;
+  }
+  .typing-indicator span {
+    width: 5px;
+    height: 5px;
+    background: #666;
+    border-radius: 50%;
+    animation: bounce 1.3s linear infinite;
+    display: inline-block;
+  }
+  .typing-indicator span:nth-child(2) { animation-delay: 0.15s; }
+  .typing-indicator span:nth-child(3) { animation-delay: 0.3s; }
+  
+  @keyframes bounce {
+    0%, 60%, 100% { transform: translateY(0); }
+    30% { transform: translateY(-4px); }
+  }
+  #salmon-form{display:flex;gap:8px;padding:12px;border-top:1px solid #eee;background:#fafafa}
+  #salmon-form input{flex:1;padding:12px;border:1px solid #ddd;border-radius:10px;font-size:15px}
+  #salmon-form button{padding:12px 16px;border:0;border-radius:10px;background:#0F3446;color:#fff;cursor:pointer;font-size:15px;font-weight:500}
   </style>
 
   <div id="salmon-bubble">
@@ -833,7 +894,31 @@
 
   <div id="salmon-panel" role="dialog" aria-label="Salmon & Co. Chat">
     <div id="salmon-head">Salmon &amp; Co. — Chat</div>
-    <div id="salmon-msgs"></div>
+    <div id="salmon-msgs">
+      <!-- Example messages for styling purposes debug-->
+      <div class="msg user">
+        <div class="avatar">You</div>
+        <div class="content">Hi, I have a question about family law services.</div>
+      </div>
+      <div class="msg bot">
+        <div class="avatar">S.C.AI</div>
+        <div class="content">Hello! I'd be happy to help with your family law inquiry. We handle various aspects of family law including divorce, child custody, property settlements, and domestic violence orders. What specific information would you like to know?</div>
+      </div>
+      <div class="msg user">
+        <div class="avatar">You</div>
+        <div class="content">What documents do I need for a divorce application?</div>
+      </div>
+      <div class="msg bot">
+        <div class="avatar">S.C.AI</div>
+        <div class="content">For a divorce application in Australia, you'll need:
+- Marriage certificate
+- Proof of citizenship/residency
+- Separation declaration
+- Identification documents
+
+Would you like me to explain more about each requirement or help you book a consultation with our family law team?</div>
+      </div>
+    </div>
     <form id="salmon-form">
       <input id="salmon-input" placeholder="Ask about our services…" autocomplete="off" />
       <button>Send</button>
@@ -853,9 +938,36 @@
 
   function add(role, text){
     const d = document.createElement('div');
-    d.style.whiteSpace='pre-wrap'; d.style.margin='6px 0';
-    d.innerHTML = `<strong>${role}:</strong> ${text}`;
-    msgs.appendChild(d); msgs.scrollTop = msgs.scrollHeight;
+    d.className = `msg ${role.toLowerCase()}`;
+    d.style.whiteSpace = 'pre-wrap';
+    const displayName = role === 'Bot' ? 'S.C.AI' : 'You';
+    d.innerHTML = `
+      <div class="avatar">${displayName}</div>
+      <div class="content">
+        ${text}
+      </div>
+    `;
+    msgs.appendChild(d);
+    msgs.scrollTop = msgs.scrollHeight;
+    return d;
+  }
+
+  function addTypingIndicator() {
+    const d = document.createElement('div');
+    d.className = 'msg bot';
+    d.innerHTML = `
+      <div class="avatar">S.C.AI</div>
+      <div class="content">
+        <div class="typing-indicator">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    `;
+    msgs.appendChild(d);
+    msgs.scrollTop = msgs.scrollHeight;
+    return d;
   }
 
   form.addEventListener('submit', async (e)=>{
@@ -863,14 +975,22 @@
     const user = input.value.trim(); if(!user) return;
     add('You', user); input.value = '';
 
-    const res = await fetch(API, {
-      method: 'POST',
-      headers: {'Content-Type':'application/json'},
-      body: JSON.stringify({ message: user, history })
-    });
-    const data = await res.json();
-    const bot = data.text || 'Sorry, no response.';
-    add('Bot', bot);
+    const typingIndicator = addTypingIndicator();
+    
+    try {
+      const res = await fetch(API, {
+        method: 'POST',
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify({ message: user, history })
+      });
+      const data = await res.json();
+      const bot = data.text || 'Sorry, no response.';
+      typingIndicator.remove();
+      add('Bot', bot);
+    } catch (error) {
+      typingIndicator.remove();
+      add('Bot', 'Sorry, I encountered an error. Please try again.');
+    }
 
     history.push({role:'user', content:user}, {role:'assistant', content:bot});
     if (history.length > 12) history.splice(0, history.length - 12);
